Fixed alignment of img

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ img {
     width: 30px;
     height: auto;
     align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+    border: 1px solid rgb(197, 197, 197);
 }
 
 .header {
